tekton/dashboard/tekton-ingresses.yaml
#
#
# The ingresses below are not part of the normal tekton release.
# If updating the Tekton release, keep these intact.
#
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: test-infra
  name: tekton-dashboard
  labels:
    app: tekton-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
spec:
  rules:
    - host: tekton.giantswarm.io
      http:
        paths:
          - path: /
            backend:
              serviceName: tekton-dashboard
              servicePort: 9097
    - host: tekton.rfjh2.k8s.gorilla.eu-central-1.aws.gigantic.io
      http:
        paths:
          - path: /
            backend:
              serviceName: tekton-dashboard
              servicePort: 9097
  tls:
    - hosts:
        - tekton.giantswarm.io
        - tekton.rfjh2.k8s.gorilla.eu-central-1.aws.gigantic.io
      secretName: tekton-dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard-oauth2-proxy
  ## Oauth2 is deployed under monitoring and it is required
  ## that the Ingress is in the same ns of the Service
  ##
  namespace: test-infra
  labels:
    app: tekton-dashboard
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: tekton.giantswarm.io
      http:
        paths:
          - path: /oauth2
            backend:
              serviceName: oauth2-proxy
              servicePort: 4180
    - host: tekton.rfjh2.k8s.gorilla.eu-central-1.aws.gigantic.io
      http:
        paths:
          - path: /oauth2
            backend:
              serviceName: oauth2-proxy
              servicePort: 4180
  tls:
    - hosts:
        - tekton.giantswarm.io
        - tekton.rfjh2.k8s.gorilla.eu-central-1.aws.gigantic.io
      secretName: tekton-dashboard
